--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,12 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="200dp"
+        android:layout_marginTop="-20dp"
         app:cardBackgroundColor="@color/TG_blue"
         app:cardCornerRadius="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -65,6 +66,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:layout_constraintVertical_bias="0.496"
-        app:srcCompat="@drawable/icon" />
+        app:srcCompat="@drawable/fbc_agedcare_icon_" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
