--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:width="200dp"
         android:height="60dp"
         android:backgroundTint="@color/TG_blue"
+        android:fontFamily="@font/poppins_bold"
         android:text="Get started"
         android:textAllCaps="false"
         android:textStyle="bold"
@@ -56,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:fontFamily="@font/poppins_bold"
                 android:text="Welcome to Patient checker"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
