--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <resources>
 
-    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen" parent="">
+    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:background">@color/black_overlay</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
