Update button text colour

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Login"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +52,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Register"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
