--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,8 @@
         android:backgroundTint="@color/TG_blue"
         android:fontFamily="@font/poppins_bold"
         android:text="Create Account"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toTopOf="@+id/backToLoginButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +67,8 @@
         android:backgroundTint="@color/TG_blue"
         android:fontFamily="@font/poppins_bold"
         android:text="Back to Login"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
