Updating button text colour after theme updates

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,6 +16,7 @@
             android:backgroundTint="@color/TG_blue"
             android:fontFamily="@font/poppins_bold"
             android:text="Get started"
+            android:textColor="@color/white"
             android:textAllCaps="false"
             android:textStyle="bold"
             app:cornerRadius="24dp"
@@ -33,6 +34,7 @@
         android:backgroundTint="@color/TG_blue"
         android:fontFamily="@font/poppins_bold"
         android:text="Patient Profile List"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:cornerRadius="24dp"
